packages/gatsby-theme-carbon/src/components/AnchorLinks/anchor-links.scss
.#{$prefix}--anchor-links__list {
  width: auto;
  margin-bottom: 0;
  margin-top: $spacing-05;

  @include carbon--breakpoint('md') {
    margin-bottom: $spacing-07;
  }
}

.#{$prefix}--anchor-links__item {
  @include carbon--type-style('expressive-heading-03', true);
  width: auto;
  list-style: none;
  padding-left: 0;
  display: flex;
  align-items: center;
  margin-left: 0;

  &:before {
    display: none;
  }
}

.#{$prefix}--anchor-links__link {
  @include carbon--type-style('expressive-heading-03', true);
  position: relative;
  display: inline-block;
  transition: color $transition--base;
  color: $interactive-02;
  text-decoration: none;
  margin-bottom: $spacing-02;

  &:hover {
    color: $interactive-01;

    &::before {
      color: $interactive-01;
    }
  }

  &:before {
    content: '\21B3'; //"↳"
    font-family: IBM Plex Sans, ibm-plex-sans, Helvetica Neue, Arial, sans-serif;
    color: $interactive-02;
    transition: color $transition--base;
    padding-right: $spacing-03;
    cursor: pointer;
  }
}

// Multiple Columns
.#{$prefix}--anchor-links__list--column {
  @include carbon--breakpoint('md') {
    column-count: 2;
  }
}

// Small
.#{$prefix}--anchor-links__list--small {
  margin-top: $spacing-05;
}

.#{$prefix}--anchor-links__link--small {
  @include carbon--type-style('body-long-02');
  margin-bottom: 0;
}

